Link, Resume Description Update

--- a/old/about.html
+++ b/old/about.html
@@ -101,7 +101,7 @@
                 <li class="box-label">Follow me</li>
 
                 <li class="box-social"><a href="https://twitter.com/pokateo_"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="www.linkedin.com/in/katekeeleyberg"><i class="ion-social-linkedin"></i></a></li>
+                <li class="box-social"><a href="https://linkedin.com/in/katekeeleyberg"><i class="ion-social-linkedin"></i></a></li>
 				<li class="box-social"><a href="mailto:kateberg00@gmail.com"><i class="ion-social-email"></i></a></li>
             </ul>
         </nav>
@@ -132,7 +132,7 @@
                 <li><strong>Nationality:</strong> American</li> 
                 <li><strong>Phone:</strong> (000) 1234 56789</li> 
                 <li><strong>Email:</strong> kateberg00@gmail.com</li>
-				<li><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/katekeeleyberg">katenk</a></li> 
+				<li><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/katekeeleyberg">katenk</a></li> 
               </ul> 
             </div>
           </div> col-md-4 
