--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<ul class="box-primary-nav">
 					<li class="box-label">Let's Chat!</li>
 						<li class="box-social"><a href="mailto:kateberg00@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
-						<li class="box-social"><a href="www.linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
+						<li class="box-social"><a href="https://linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
 						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
 					<li class="box-label">Kate Berg</li>
 					<li><a href="../resume.html">Resume</a></li>
@@ -532,7 +532,7 @@
         <div class="container-fluid">
             <h5 align="center"><a href="#portfolio">Portfolio</a> &#8226; <a href="resume.html">Resume</a></h5>
 				<h5><a href="mailto:kateberg00@gmail.com"><i class="ion-paper-airplane"></i></a>  
-				<a href="www.linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin"></i></a>  
+				<a href="https://linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin"></i></a>  
 				<a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter"></i></a></h5>
 		</div>
     </footer>
