--- a/old/contact (2).html
+++ b/old/contact (2).html
@@ -96,7 +96,7 @@
             <h5></h5>
             <div class="contact-info">
             <h1><a href="mailto:kateberg00@gmail.com" target="_blank" class="fa fa-envelope"></a>
-			    <a href="www.linkedin.com/in/katekeeleyberg" target="_blank" class="fa fa-linkedin"></a>
+			    <a href="https://linkedin.com/in/katekeeleyberg" target="_blank" class="fa fa-linkedin"></a>
 			    <a href="https://twitter.com/pokateo_" target="_blank" class="fa fa-twitter"></a>
 			    <a href="https://www.behance.net/kateberg" target="_blank" class="fa fa-behance"></a></h1>
             </div>
