--- a/resume.html
+++ b/resume.html
@@ -441,9 +441,9 @@
         <h2 id="skills" class="section-title wow fadeInUp">Skills</h2>
         <div class="row">
           
-		  <div class="col-md-4"><h3>GIS & Modeling</h3><br>
+		  <div class="col-md-4"><h3>Esri ArcGIS Suite</h3><br>
 			<div class="skill-progress">
-              <div class="skill-title"><h3>ArcGIS&nbsp;</h3></div> 
+              <div class="skill-title"><h3>ArcGIS Desktop 10.6&nbsp;</h3></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
@@ -451,28 +451,60 @@
             </div><!-- /.skill-progress -->
 
             <div class="skill-progress">
-              <div class="skill-title"><h3>QGIS&nbsp;</h3></div> 
+              <div class="skill-title"><h3>ArcGIS Pro 2.2&nbsp;</h3></div> 
               <div class="progress">
-                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
+                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
             <div class="skill-progress">
-              <div class="skill-title"><h3>AutoCAD&nbsp;</h3></div>  
+              <div class="skill-title"><h3>Story Maps&nbsp;</h3></div>  
               <div class="progress">
-                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
+                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
 			<div class="skill-progress">
-              <div class="skill-title"><h3>Sketch-Up&nbsp;</h3></div>  
+              <div class="skill-title"><h3>ArcGIS Online&nbsp;</h3></div>  
               <div class="progress">
-                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
+                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
-              </div><!-- /.progress -->
+			  </div><!-- /.progress -->
+			  
             </div><!-- /.skill-progress -->
 			</div class="col-md-4">
-			
+			<div class="col-md-4"><h3>Misc. GIS & Modeling</h3><br>
+				<div class="skill-progress">
+				  <div class="skill-title"><h3>QGIS&nbsp;</h3></div> 
+				  <div class="progress">
+					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
+					</div>
+				  </div><!-- /.progress -->
+				</div><!-- /.skill-progress -->
+	
+				<div class="skill-progress">
+				  <div class="skill-title"><h3>CartoDB&nbsp;</h3></div> 
+				  <div class="progress">
+					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
+					</div>
+				  </div><!-- /.progress -->
+				</div><!-- /.skill-progress -->
+				<div class="skill-progress">
+				  <div class="skill-title"><h3>AutoCAD&nbsp;</h3></div>  
+				  <div class="progress">
+					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
+					</div>
+				  </div><!-- /.progress -->
+				</div><!-- /.skill-progress -->
+				<div class="skill-progress">
+				  <div class="skill-title"><h3>Sketch-Up&nbsp;</h3></div>  
+				  <div class="progress">
+					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
+					</div>
+				  </div><!-- /.progress -->
+
+				</div><!-- /.skill-progress -->
+				</div class="col-md-4">
 			<div class="col-md-4"><h3>Adobe</h3><br>
 			<div class="skill-progress">
               <div class="skill-title"><h3>Illustrator&nbsp;</h3></div> 
@@ -482,7 +514,7 @@
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
             <div class="skill-progress">
-              <div class="skill-title"><h3>Photoshop&nbsp;</h3></div> 
+              <div class="skill-title"><h3>Photo<br>shop&nbsp;</h3></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
@@ -503,7 +535,7 @@
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
            </div class="col-md-4">
-		
+		   <br><br>
 		<div class="col-md-4"><h3>Programming & Markup</h3><br>
 		   <div class="skill-progress">
               <div class="skill-title"><h3>LaTex</h3></div> 
@@ -535,8 +567,7 @@
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
 		  </div class="col-md-4">
-
-		  <div class="col-md-4"><h3>Microsoft Suite</h3><br>
+		<div class="col-md-4"><h3>Microsoft Suite</h3><br>
 			<div class="skill-progress">
 			   <div class="skill-title"><h3>Access&nbsp;</h3></div> 
 			   <div class="progress">
@@ -553,7 +584,7 @@
 			 </div><!-- /.skill-progress -->
  
 			<div class="skill-progress">
-			   <div class="skill-title"><h3>PowerPoint&nbsp;</h3></div> 
+			   <div class="skill-title"><h3>Power<br>Point&nbsp;</h3></div> 
 			   <div class="progress">
 				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
 				 </div>
