Skill, Certificates Update

--- a/resume.html
+++ b/resume.html
@@ -443,7 +443,7 @@
           
 		  <div class="col-md-4"><h3>Esri ArcGIS Suite</h3><br>
 			<div class="skill-progress">
-              <div class="skill-title"><h3>ArcGIS Desktop 10.6&nbsp;</h3></div> 
+              <div class="skill-title"><h3>ArcGIS Desktop&nbsp;</h3></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
@@ -451,7 +451,7 @@
             </div><!-- /.skill-progress -->
 
             <div class="skill-progress">
-              <div class="skill-title"><h3>ArcGIS Pro 2.2&nbsp;</h3></div> 
+              <div class="skill-title"><h3>ArcGIS Pro&nbsp;</h3></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
@@ -492,20 +492,20 @@
 				<div class="skill-progress">
 				  <div class="skill-title"><h3>AutoCAD&nbsp;</h3></div>  
 				  <div class="progress">
-					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
+					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" ><span></span>
 					</div>
 				  </div><!-- /.progress -->
 				</div><!-- /.skill-progress -->
 				<div class="skill-progress">
 				  <div class="skill-title"><h3>Sketch-Up&nbsp;</h3></div>  
 				  <div class="progress">
-					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
+					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" ><span></span>
 					</div>
 				  </div><!-- /.progress -->
 
 				</div><!-- /.skill-progress -->
 				</div class="col-md-4">
-			<div class="col-md-4"><h3>Adobe</h3><br>
+			<div class="col-md-4"><h3>Adobe Suite</h3><br>
 			<div class="skill-progress">
               <div class="skill-title"><h3>Illustrator&nbsp;</h3></div> 
               <div class="progress">
@@ -617,7 +617,7 @@
 											<div class="timeline-content">
 												<div class="timeline-heading">
 													<h4><font color="#FFBF00">Certificates</font></h4>
-													<br><h6>PADI | Advanced Open Water SCUBA Diver</h6>
+													<br><h6>PADI | Advanced Open Water SCUBA Diver <br> PADI | Equipment Specialist <br> PADI | Peak Performance Buoyancy <br> PADI | Open Water SCUBA Diver</h6>
 												</div>
 											</div>
 										</div>
