--- a/resume.html
+++ b/resume.html
@@ -617,7 +617,7 @@
 											<div class="timeline-content">
 												<div class="timeline-heading">
 													<h4><font color="#FFBF00">Certificates</font></h4>
-													<br><h6>PADI | Advanced Open Water SCUBA Diver <br> PADI | Equipment Specialist <br> PADI | Peak Performance Buoyancy <br> PADI | Open Water SCUBA Diver</h6>
+													<br><h6>Compliance Solutions | 40-Hour OSHA HAZWOPER Training<br>PADI | Advanced Open Water SCUBA Diver <br> PADI | Equipment Specialist <br> PADI | Peak Performance Buoyancy <br> PADI | Open Water SCUBA Diver</h6>
 												</div>
 											</div>
 										</div>
