--- a/resume.html
+++ b/resume.html
@@ -451,21 +451,21 @@
             </div><!-- /.skill-progress -->
 
             <div class="skill-progress">
-              <div class="skill-title"><h3>ArcGIS Pro&nbsp;</h3></div> 
+              <div class="skill-title"><h6>ArcGIS Pro&nbsp;</h6></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
             <div class="skill-progress">
-              <div class="skill-title"><h3>Story Maps&nbsp;</h3></div>  
+              <div class="skill-title"><h6>Story Maps&nbsp;</h6></div>  
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
 			<div class="skill-progress">
-              <div class="skill-title"><h3>ArcGIS Online&nbsp;</h3></div>  
+              <div class="skill-title"><h6>ArcGIS Online&nbsp;</h6></div>  
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
@@ -514,7 +514,7 @@
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
             <div class="skill-progress">
-              <div class="skill-title"><h3>Photo<br>shop&nbsp;</h3></div> 
+              <div class="skill-title"><h3>Photoshop&nbsp;</h3></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
@@ -584,7 +584,7 @@
 			 </div><!-- /.skill-progress -->
  
 			<div class="skill-progress">
-			   <div class="skill-title"><h3>Power<br>Point&nbsp;</h3></div> 
+			   <div class="skill-title"><h3>PowerPoint&nbsp;</h3></div> 
 			   <div class="progress">
 				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
 				 </div>
