--- a/resume.html
+++ b/resume.html
@@ -443,7 +443,7 @@
           
 		  <div class="col-md-4"><h3>Esri ArcGIS Suite</h3><br>
 			<div class="skill-progress">
-              <div class="skill-title"><h3>ArcGIS Desktop&nbsp;</h3></div> 
+              <div class="skill-title"><h6>ArcGIS Desktop&nbsp;</h6></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
@@ -475,7 +475,7 @@
 			</div class="col-md-4">
 			<div class="col-md-4"><h3>Misc. GIS & Modeling</h3><br>
 				<div class="skill-progress">
-				  <div class="skill-title"><h3>QGIS&nbsp;</h3></div> 
+				  <div class="skill-title"><h6>QGIS&nbsp;</h6></div> 
 				  <div class="progress">
 					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
 					</div>
@@ -483,21 +483,21 @@
 				</div><!-- /.skill-progress -->
 	
 				<div class="skill-progress">
-				  <div class="skill-title"><h3>CartoDB&nbsp;</h3></div> 
+				  <div class="skill-title"><h6>CartoDB&nbsp;</h6></div> 
 				  <div class="progress">
 					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
 					</div>
 				  </div><!-- /.progress -->
 				</div><!-- /.skill-progress -->
 				<div class="skill-progress">
-				  <div class="skill-title"><h3>AutoCAD&nbsp;</h3></div>  
+				  <div class="skill-title"><h6>AutoCAD&nbsp;</h6></div>  
 				  <div class="progress">
 					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" ><span></span>
 					</div>
 				  </div><!-- /.progress -->
 				</div><!-- /.skill-progress -->
 				<div class="skill-progress">
-				  <div class="skill-title"><h3>Sketch-Up&nbsp;</h3></div>  
+				  <div class="skill-title"><h6>Sketch-Up&nbsp;</h6></div>  
 				  <div class="progress">
 					<div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" ><span></span>
 					</div>
@@ -507,28 +507,28 @@
 				</div class="col-md-4">
 			<div class="col-md-4"><h3>Adobe Suite</h3><br>
 			<div class="skill-progress">
-              <div class="skill-title"><h3>Illustrator&nbsp;</h3></div> 
+              <div class="skill-title"><h6>Illustrator&nbsp;</h6></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
             <div class="skill-progress">
-              <div class="skill-title"><h3>Photoshop&nbsp;</h3></div> 
+              <div class="skill-title"><h6>Photoshop&nbsp;</h6></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
             <div class="skill-progress">
-              <div class="skill-title"><h3>InDesign&nbsp;</h3></div>  
+              <div class="skill-title"><h6>InDesign&nbsp;</h6></div>  
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
 			<div class="skill-progress">
-              <div class="skill-title"><h3>Dream-<br>weaver&nbsp;</h3></div> 
+              <div class="skill-title"><h6>Dreamweaver&nbsp;</h6></div> 
               <div class="progress">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
@@ -536,47 +536,16 @@
             </div><!-- /.skill-progress -->
            </div class="col-md-4">
 		   <br><br>
-		<div class="col-md-4"><h3>Programming & Markup</h3><br>
-		   <div class="skill-progress">
-              <div class="skill-title"><h3>LaTex</h3></div> 
-              <div class="progress">
-                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ><span></span>
-                </div>
-              </div><!-- /.progress -->
-            </div><!-- /.skill-progress -->
-            <div class="skill-progress">
-              <div class="skill-title"><h3>Python&nbsp;</h3></div>  
-              <div class="progress">
-                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
-                </div>
-              </div><!-- /.progress -->
-            </div><!-- /.skill-progress -->
-
-		   <div class="skill-progress">
-              <div class="skill-title"><h3>R&nbsp;</h3></div> 
-              <div class="progress">
-                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" ><span></span>
-                </div>
-              </div><!-- /.progress -->
-            </div><!-- /.skill-progress -->
-            <div class="skill-progress">
-              <div class="skill-title"><h3>HTML & <br> CSS&nbsp;</h3></div>  
-              <div class="progress">
-                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ><span></span>
-                </div>
-              </div><!-- /.progress -->
-            </div><!-- /.skill-progress -->
-		  </div class="col-md-4">
-		<div class="col-md-4"><h3>Microsoft Suite</h3><br>
+				<div class="col-md-4"><h3>Microsoft Suite</h3><br>
 			<div class="skill-progress">
-			   <div class="skill-title"><h3>Access&nbsp;</h3></div> 
+			   <div class="skill-title"><h6>Access&nbsp;</h6></div> 
 			   <div class="progress">
 				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
 				 </div>
 			   </div><!-- /.progress -->
 			 </div><!-- /.skill-progress -->
 			 <div class="skill-progress">
-			   <div class="skill-title"><h3>Excel&nbsp;</h3></div>  
+			   <div class="skill-title"><h6>Excel&nbsp;</h6></div>  
 			   <div class="progress">
 				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
 				 </div>
@@ -584,16 +553,47 @@
 			 </div><!-- /.skill-progress -->
  
 			<div class="skill-progress">
-			   <div class="skill-title"><h3>PowerPoint&nbsp;</h3></div> 
+			   <div class="skill-title"><h6>PowerPoint&nbsp;</h6></div> 
 			   <div class="progress">
 				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
 				 </div>
 			   </div><!-- /.progress -->
 			 </div><!-- /.skill-progress -->
 			 <div class="skill-progress">
-			   <div class="skill-title"><h3>Visio&nbsp;</h3></div>  
+			   <div class="skill-title"><h6>Visio&nbsp;</h6></div>  
 			   <div class="progress">
 				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
+				 </div>
+			   </div><!-- /.progress -->
+			 </div><!-- /.skill-progress -->
+		   </div class="col-md-4">
+		   <div class="col-md-4"><h3>Programming & Markup</h3><br>
+			<div class="skill-progress">
+			   <div class="skill-title"><h6>LaTex</h6></div> 
+			   <div class="progress">
+				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ><span></span>
+				 </div>
+			   </div><!-- /.progress -->
+			 </div><!-- /.skill-progress -->
+			 <div class="skill-progress">
+			   <div class="skill-title"><h6>Python&nbsp;</h6></div>  
+			   <div class="progress">
+				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
+				 </div>
+			   </div><!-- /.progress -->
+			 </div><!-- /.skill-progress -->
+ 
+			<div class="skill-progress">
+			   <div class="skill-title"><h6>R&nbsp;</h6></div> 
+			   <div class="progress">
+				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
+				 </div>
+			   </div><!-- /.progress -->
+			 </div><!-- /.skill-progress -->
+			 <div class="skill-progress">
+			   <div class="skill-title"><h6>HTML & CSS&nbsp;</h6></div>  
+			   <div class="progress">
+				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ><span></span>
 				 </div>
 			   </div><!-- /.progress -->
 			 </div><!-- /.skill-progress -->
