--- a/portfolio/cheboygan.html
+++ b/portfolio/cheboygan.html
@@ -33,7 +33,7 @@
    <!-- Navigation -->
 	<div class="container-fluid"> 
         <header class="box-header">
-			<span><img src="..\img\headportfolio.png" style="width:200px;height:100px;"></span>
+			<span><a href="../index.html#portfolio"><img src="..\img\headportfolio.png" style="width:200px;height:100px;"></a></span>
 			<a class="box-primary-nav-trigger" href="#0">
                 <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
             </a>
