--- a/portfolio/whatisGIS.html
+++ b/portfolio/whatisGIS.html
@@ -33,7 +33,7 @@
    <!-- Navigation -->
 	<div class="container-fluid"> 
         <header class="box-header">
-			<span><img src="..\img\headportfolio.png" style="width:200px;height:100px;"></span>
+			<span><a href="../index.html#portfolio"><img src="..\img\headportfolio.png" style="width:200px;height:100px;"></a></span>
 			<a class="box-primary-nav-trigger" href="#0">
                 <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
             </a>
@@ -100,7 +100,7 @@
             <div class="portfolio">
                 <div class="categories-grid wow fadeInLeft">
                     <nav class="categories text-center">
-						<h1>What is GIS? Story Map</h1>
+						<h1>Story Map Portfolio</h1>
 						<h2>Summer 2017</h2>
                     </nav>
                 </div>
@@ -112,7 +112,7 @@
 	<!-- main-container -->
 	<div class="container main-container">
         <div class="col-md-9">
-            <h3>Created for Giffels Webster GIS presentations to clients.</h3>
+            <h3>Prior to making this website, I used an Esri Story Map for my portfolio. Or, rather, many many Esri Story Maps embedded within one another for my portfolio.</h3>
 		</div>
 
         <div class="col-md-3">
@@ -123,7 +123,7 @@
 		</div>
 		
 		<div class="col-md-12">
-			<iframe width="100%" height="700" src="https://giffels-webster.maps.arcgis.com/apps/Cascade/index.html?appid=68d416fc133d49259e9fd85a5a9c3400" frameborder="0" scrolling="yes"></iframe>
+			<iframe width="100%" height="700" src="https://www.arcgis.com/apps/MapSeries/index.html?appid=9140e66da35e45ee90f571f03cdd760d" frameborder="0" scrolling="yes"></iframe>
 		</div>
     </div>
     <!-- end main-container -->
