Old Portfolio Addition

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 						<tr>
 							<th><li style="font-size:90%;"><a href="../portfolio/toolbox.html">Species Reintroduction Toolbox </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/wellbeing.html">State of American Wellbeing Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/oldportfolio.html">Story Map Portfolio </a></li></th>
 						</tr>
 						<tr>							
-							<th><li style="font-size:90%;"><a href="../portfolio/whatisGIS.html">What is GIS? </a></li></th>
+                            <th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/wildthings.html">Where the Wild Things Are Map  </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/lakes.html">World's Largest Lakes </a></li></th>
 						</tr>
@@ -261,21 +261,21 @@
                         </div>
                     <!-- End MP -->
 
-					<!-- WhatisGIS -->
-                    <div class="col-md-4 col-sm-6 ads public story">
-                        <a href="portfolio/whatisGIS.html" class="portfolio_item">
-                            <img src="img/Cover/whatisgis.gif" alt="image" class="img-responsive" />
+					<!-- oldportfolio -->
+                    <div class="col-md-4 col-sm-6 ads story">
+                        <a href="portfolio/oldportfolio.html" class="portfolio_item">
+                            <img src="img\Cover\oldport.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
-                                        <span>What is GIS?</span>
-                                        <em>Public Engagement / Story Map</em>
+                                        <span>Story Map Portfolio</span>
+                                        <em>Story Map</em>
                                     </div>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <!-- End WhatisGIS -->					
+                    <!-- End oldportfolio -->					
 					
 					<!-- Urban Wildlife Week -->
                     <div class="col-md-4 col-sm-6 ads cartography public story spatial">
