--- a/portfolio/oldportfolio.html
+++ b/portfolio/oldportfolio.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>What is GIS? Story Map</title>
+    <title>Story Map Portfolio Story Map</title>
     <link rel="icon" href="../img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -81,10 +81,10 @@
 						<tr>
 							<th><li style="font-size:90%;"><a href="../portfolio/toolbox.html">Species Reintroduction Toolbox </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/wellbeing.html">State of American Wellbeing Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/oldportfolio.html">Story Map Portfolio </a><i class="ion-ios-circle-filled color"></i></li></th>
 						</tr>
 						<tr>							
-							<th><li style="font-size:90%;"><a href="../portfolio/whatisGIS.html">What is GIS? </a><i class="ion-ios-circle-filled color"></i></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/wildthings.html">Where the Wild Things Are Map  </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/lakes.html">World's Largest Lakes </a></li></th>
 						</tr>
@@ -112,7 +112,8 @@
 	<!-- main-container -->
 	<div class="container main-container">
         <div class="col-md-9">
-            <h3>Prior to making this website, I used an Esri Story Map for my portfolio. Or, rather, many many Esri Story Maps embedded within one another for my portfolio.</h3>
+			<h3>Prior to making this website, I used an Esri Story Map for my portfolio. Or, rather, many many Esri Story Maps embedded within one another for my portfolio.</h3>
+			<p> <a href="https://www.arcgis.com/apps/MapSeries/index.html?appid=9140e66da35e45ee90f571f03cdd760d" target="_blank">View porftolio in new tab.</a></p>
 		</div>
 
         <div class="col-md-3">
