--- a/portfolio/wellbeing.html
+++ b/portfolio/wellbeing.html
@@ -81,10 +81,10 @@
 						<tr>
 							<th><li style="font-size:90%;"><a href="../portfolio/toolbox.html">Species Reintroduction Toolbox </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/wellbeing.html">State of American Wellbeing Map </a><i class="ion-ios-circle-filled color"></i></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/oldportfolio.html">Story Map Portfolio </a></li></th>
 						</tr>
 						<tr>							
-							<th><li style="font-size:90%;"><a href="../portfolio/whatisGIS.html">What is GIS? </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/wildthings.html">Where the Wild Things Are Map  </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/lakes.html">World's Largest Lakes </a></li></th>
 						</tr>
