--- a/resume.html
+++ b/resume.html
@@ -114,10 +114,10 @@
 						<tr>
 							<th><li style="font-size:90%;"><a href="../portfolio/toolbox.html">Species Reintroduction Toolbox </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/wellbeing.html">State of American Wellbeing Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
+							<th><li style="font-size:90%;"><a href="../portfolio/oldportfolio.html">Story Map Portfolio </a></li></th>
 						</tr>
 						<tr>							
-							<th><li style="font-size:90%;"><a href="../portfolio/whatisGIS.html">What is GIS? </a></li></th>
+                            <th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/wildthings.html">Where the Wild Things Are Map  </a></li></th>
 							<th><li style="font-size:90%;"><a href="../portfolio/lakes.html">World's Largest Lakes </a></li></th>
 						</tr>
@@ -258,7 +258,7 @@
 
 												<div class="timeline-body">
 												<ul class="cat-ul">
-													<li><i class="ion-ios-circle-filled"></i>Strengthening the Geographic Information Systems (GIS) program through <a href="http://www.giffelswebster.com/urban-planning-and-your-mappy-halloween/" target="_blank">weekly blog posts</a>, redesigning website content, and promoting GIS to clients through the development and presentation of marketing materials using <a href="../portfolio/whatisGIS.html" target="_blank">ESRI Story Maps</a>, Microsoft Products, and Adobe Products</li>
+													<li><i class="ion-ios-circle-filled"></i>Strengthening the Geographic Information Systems (GIS) program through <a href="http://www.giffelswebster.com/urban-planning-and-your-mappy-halloween/" target="_blank">weekly blog posts</a>, redesigning website content, and promoting GIS to clients through the development and presentation of marketing materials using <a href="../portfolio/oldportfolio.html" target="_blank">ESRI Story Maps</a>, Microsoft Products, and Adobe Products</li>
 													<li><i class="ion-ios-circle-filled"></i> Creating high quality print and interactive web maps and apps, as well as performing GIS data maintenance, manipulation, and analysis</li>
 													<li><i class="ion-ios-circle-filled"></i>Developing GIS citizen engagement options by researching, organizing, and creating interactive web applications to encourage public participation (e.g. <a href="../portfolio/lathrup.html" target="_blank">Clearzoning!</a> and <a href="../portfolio/picturethis.html" target="_blank">Picture This</a>)</li>
 												</ul>
