--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 						<li class="box-social"><a href="https://linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
 						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
 					<li class="box-label">Kate Berg</li>
-                    <li><a href="../resume.html">Resume</a> | <a href="img\resume.pdf"  target="_blank">Resume (PDF)</a></li>
-					<li><a href="../index.html#portfolio">Portfolio </a><i class="ion-ios-circle-filled color"></i></li>
+                    <li><a href="../resume.html">Resume</a></li>
+					<li><a href="../index.html#portfolio">Portfolio</a><i class="ion-ios-circle-filled color"></i></li>
 					<table align="center">
 						<tr>
 							<th><li style="font-size:90%;"><a href="../portfolio/birds.html">A Bird's Eye View Map </a></li></th>
