--- a/resume.html
+++ b/resume.html
@@ -142,11 +142,10 @@
 
 				<div class="col-md-8 col-md-pull-4">
 					<div class="short-info wow fadeInUp">
-					  <h4>I am passionate about connecting people with information and am always looking for opportunities where I can combine my interests in natural resources and the environment with my technical geospatial skills to convey complex information in innovative, compelling, and engaging ways.</h4>
+					  <h4>I am passionate about connecting people with information.</h4>
 					  <br>
-						<p>Marrying my deep interest and strong background in the life sciences and geospatial technologies, I earned my master's in science in environmental policy and communication. Along the way, I've centrifuged marmot poop, presented interpretive talks among Sequoias and elephants, and worked to #SaveLACougars (the feline kind). I've developed interactive mapping platforms for public engagement, used remote sensing to answer "why did the cat crossed the road?", and created heatmaps of direwolf bone injuries.</p>
-						<p>With all these hats I've worn, I am prepared to tackle a variety of projects.</p>
-						<p>Please continue scrolling for more...</p>
+						<p>I am always looking for opportunities where I can combine my interests in natural resources and the environment with my technical geospatial skills to convey complex information in innovative, compelling, and engaging ways.</p>
+						<p>Please continue scrolling for more information...</p>
 							  <ul class="list-check">
 								<li>Cartography</li>
 								<li>Science Communication</li>
@@ -232,7 +231,7 @@
 											<div class="timeline-content">
 												<div class="timeline-heading">
 													<h3>GIS Consultant</h3>
-													<span>Ramboll Environ | Ann Arbor, MI</span>
+													<span>Ramboll | Ann Arbor, MI</span>
 												</div><!-- /timeline-heading -->
 
 												<div class="timeline-body">
