--- a/portfolio/heart.html
+++ b/portfolio/heart.html
@@ -41,7 +41,7 @@
 			<nav>
 				<ul class="box-primary-nav">
 					<li class="box-label">Let's Chat!</li>
-						<li class="box-social"><a href="mailto:kateberg00@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
+						<li class="box-social"><a href="mailto:katekeeleyberg@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
 						<li class="box-social"><a href="https://linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
 						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
 					<li class="box-label">Kate Berg</li>
@@ -171,7 +171,7 @@
      <footer>
         <div class="container-fluid">
             <h5 align="center"><a href="../index.html#portfolio">Portfolio</a> &#8226; <a href="../resume.html">Resume</a></h5>
-				<h5><a href="mailto:kateberg00@gmail.com"><i class="ion-paper-airplane"></i></a>  
+				<h5><a href="mailto:katekeeleyberg@gmail.com"><i class="ion-paper-airplane"></i></a>  
 				<a href="https://linkedin.com/in/katekeeleyberg" target="_blank"><i class="ion-social-linkedin"></i></a>  
 				<a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter"></i></a></h5>
 		</div>
