--- a/resume.html
+++ b/resume.html
@@ -134,11 +134,11 @@
 		<div class="container">
 			<h2 class="section-title wow fadeInUp">Kate Berg</h2> 
 			<div class="row">
-				<div class="col-md-4 col-md-push-8">
+			<!-- 	<div class="col-md-4 col-md-push-8">
 					<div class="biography">
 						<img src="img/head.jpg" alt="">
 					 </div>
-				</div>
+				</div> -->
 
 				<div class="col-md-8 col-md-pull-4">
 					<div class="short-info wow fadeInUp">
