--- a/resume.html
+++ b/resume.html
@@ -231,7 +231,7 @@
 											<div class="timeline-content">
 												<div class="timeline-heading">
 													<h3>GIS Consultant</h3>
-													<span>Ramboll | Ann Arbor, MI</span>
+													<span><a href="https://ramboll.com/"  target="_blank"></a>Ramboll</a> | Ann Arbor, MI</span>
 												</div><!-- /timeline-heading -->
 
 												<div class="timeline-body">
@@ -253,7 +253,7 @@
 											<div class="timeline-content">
 												<div class="timeline-heading">
 													<h3>GIS Specialist</h3>
-													<span>Giffels Webster | Detroit, MI</span>
+													<span><a href="https://www.giffelswebster.com/" target="_blank">Giffels Webster</a> | Detroit, MI</span>
 												</div><!-- /timeline-heading -->
 
 												<div class="timeline-body">
