--- a/resume.html
+++ b/resume.html
@@ -140,7 +140,7 @@
 					 </div>
 				</div> -->
 
-				<div class="col-md-8 col-md-pull-4">
+				<div class="col-md-12">
 					<div class="short-info wow fadeInUp">
 					  <h4>I am passionate about connecting people with information.</h4>
 					  <br>
@@ -231,7 +231,7 @@
 											<div class="timeline-content">
 												<div class="timeline-heading">
 													<h3>GIS Consultant</h3>
-													<span><a href="https://ramboll.com/"  target="_blank"></a>Ramboll</a> | Ann Arbor, MI</span>
+													<span><a href="https://ramboll.com/"  target="_blank">Ramboll</a> | Ann Arbor, MI</span>
 												</div><!-- /timeline-heading -->
 
 												<div class="timeline-body">
