--- a/resume.html
+++ b/resume.html
@@ -142,9 +142,9 @@
 
 				<div class="col-md-12">
 					<div class="short-info wow fadeInUp">
-					  <h4>I am passionate about connecting people with information.</h4>
+					  <h3>I am passionate about connecting people with information.</h3>
 					  <br>
-						<p>I am always looking for opportunities where I can combine my interests in natural resources and the environment with my technical geospatial skills to convey complex information in innovative, compelling, and engaging ways.</p>
+						<h5>I am always looking for opportunities where I can combine my interests in natural resources and the environment with my technical geospatial skills to convey complex information in innovative, compelling, and engaging ways.</h5>
 						<p>Please continue scrolling for more information...</p>
 							  <ul class="list-check">
 								<li>Cartography</li>
