--- a/resume.html
+++ b/resume.html
@@ -235,7 +235,10 @@
 
 												<div class="timeline-body">
 													<ul class="cat-ul">
-														<li><i class="ion-ios-circle-filled"></i>Providing geospatial data management, maintenance, analysis, and visualization solutions within the environmental management field to support ecological monitoring, sediment management, site remediation, risk assessment, community development, urban planning projects, etc.</li>
+														<li><i class="ion-ios-circle-filled"></i>Providing GIS solutions to support environmental management, including ecological monitoring, sediment management, site remediation,risk assessment, and community development</li>
+															<li><i class="ion-ios-circle-filled"></i>Geospatial data management, modeling, automation, analysis, and visualization using Esri ArcGIS Suite, Microsoft Access, and Microsoft Excel</li>
+															<li><i class="ion-ios-circle-filled"></i>Supporting the company’s digitalization efforts through the introduction of Esri Story Maps, interactive web mapping applications, and data collection tools to my office</li>
+															<li><i class="ion-ios-circle-filled"></i>Graphic design of materials using Microsoft Visio, PowerPoint, and Publisher and Adobe Illustrator, InDesign, Photoshop</li>
 													</ul>
 												</div><!-- /timeline-body -->
 											</div> <!-- /timeline-content -->
