--- a/resume.html
+++ b/resume.html
@@ -455,7 +455,7 @@
             <div class="skill-progress">
               <div class="skill-title"><h6>ArcGIS Pro&nbsp;</h6></div> 
               <div class="progress">
-                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" ><span></span>
+                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
@@ -525,7 +525,7 @@
             <div class="skill-progress">
               <div class="skill-title"><h6>InDesign&nbsp;</h6></div>  
               <div class="progress">
-                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ><span></span>
+                <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" ><span></span>
                 </div>
               </div><!-- /.progress -->
             </div><!-- /.skill-progress -->
@@ -573,7 +573,7 @@
 			<div class="skill-progress">
 			   <div class="skill-title"><h6>LaTex</h6></div> 
 			   <div class="progress">
-				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ><span></span>
+				 <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" ><span></span>
 				 </div>
 			   </div><!-- /.progress -->
 			 </div><!-- /.skill-progress -->
@@ -631,7 +631,7 @@
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
                                             <h4><font color="#FFBF00">Certificates</font></h4>
-											<br><h6>Esri | ArcGIS Desktop Associate 10.3</h6>
+											<br><h6><a href="https://www.esri.com/training/catalog/582b66ac146072a52e8e558a/arcgis-desktop-associate-10.5/" target="_blank">Esri | ArcGIS Desktop Associate 10.3</a></h6>
 																						<h6> <a href="https://www.esri.com/training/catalog/57aba196cbc441087e0d2395/earth-imagery-at-work/" target = "_blank">Esri | Earth Imagery at Work</a> <br>Esri | Basics of Python (for ArcGIS 10)<br> <a href="https://www.esri.com/training/catalog/5763042c851d31e02a43ed84/python-scripting-for-geoprocessing-workflows/" target="_blank">Esri | Python Scripting for Geoprocessing Workflows</a> <br> Esri | Python Scripting for Map Automation 
 																							<br> <a href="https://www.lynda.com/Design-Infographics-tutorials/Data-Visualization-Fundamentals/153776-2.html" target="_blank">Lynda.com | Data Visualization</a> <br> <a href="https://www.lynda.com/Page-Layout-tutorials/Design-101-Presentations/440957-2.html" target="_blank">Lynda.com | Graphic Design </a> <br> <a href="https://www.lynda.com/course-tutorials/Design-Thinking-Customer-Experience/588034-2.html" target="_blank">Lynda.com | Design Thinking: Customer Experience </a>
 																							<br> <a href="https://www.lynda.com/SketchUp-tutorials/SketchUp-2017-Essential-Training/494108-2.html" target="_blank">Lynda.com | SketchUp 2017 Essential Training</a> <br> <a href="https://www.lynda.com/Access-tutorials/Access-2016-Advanced-Tips-Tricks/455725-2.html" target="_blank">Lynda.com | Access 2016 Essential Training </a> <br><a href="https://www.lynda.com/Access-tutorials/Access-2013-Essential-Training/115857-2.html" target="_blank">Lynda.com | Access 2013 Essential Training </a> 
@@ -651,7 +651,7 @@
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
                                             <h4><font color="#FFBF00">Certificates</font></h4>
-											<br><h6>Esri | Do-It-Yourself Geo Apps <br> Esri | Going Places with Spatial Analyses</h6>
+											<br><h6><a href="https://www.esri.com/training/catalog/57660ed7bb54adb30c9454a3/do-it-yourself-geo-apps/" target="_blank">Esri | Do-It-Yourself Geo Apps</a> <br> <a href="https://www.esri.com/training/catalog/57660f19bb54adb30c9454b0/going-places-with-spatial-analysis/" target="_blank">Esri | Going Places with Spatial Analyses</a></h6>
 											<br><br><h4><font color="#186464">Outstanding Graduate Student Instructor</font></h4>
                                             <br><h6>Program in the Environment, University of Michigan</h6>
 											<p>This award recognizes an ENVIRON-course Graduate Student Instructor (GSI) who demonstrates outstanding commitment to teaching undergraduates and providing them with exceptional learning experiences.</p>
